objects/Property_Surrogate__c.object
<CustomObject>
    <fields>
        <fullName>Asset_Detail__c</fullName>
        <formula>Property__r.Asset_Make_Description__c &amp;  IF(NOT(ISBLANK( Property__r.Vehicle_Registration_Number__c)), &apos;-&apos; &amp; Property__r.Vehicle_Registration_Number__c, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DWH_Deregistration_Date__c</fullName>
        <label>DWH:Deregistration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DWH_Registration_date__c</fullName>
        <label>DWH:Registration date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LoanSurrogateExternalID__c</fullName>
        <label>Contract External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Surrogate__c</fullName>
        <label>Contract Number</label>
        <referenceTo>collect__Loan_Account__c</referenceTo>
        <relationshipName>Property_Surrogates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_External_Id__c</fullName>
        <label>Security External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_PostCode__c</fullName>
        <formula>Property__r.Property_PostCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Residential Post Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <formula>Property__r.Property_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Residential State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Street__c</fullName>
        <formula>Property__r.Property_Street__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Residential Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Suburb_Town__c</fullName>
        <formula>Property__r.Property_Suburb_Town__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Residential Suburb/Town</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_SurrogateExternalID__c</fullName>
        <externalId>true</externalId>
        <label>Security/Contract External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Unit_House_Number__c</fullName>
        <formula>Property__r.Property_Unit_House_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Residential Unit/House Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Security</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipName>Property_Surrogates</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Recovery_Record_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Recovery Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registration_Status__c</fullName>
        <label>Registration Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecurityContractStatus__c</fullName>
        <formula>Loan_Surrogate__r.ScCollection_Loan_Sub_status_description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SecurityContractStatus</label>
        <type>Text</type>
    </fields>
    <label>Security/Contract</label>
    <nameField>
        <label>Security/Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Security/Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>